--- a/styles.css
+++ b/styles.css
@@ -76,11 +76,12 @@ h1{
     background: #f5f5f5;
     border-radius: 1.625rem;
     padding: 0 2.8rem 0 1rem;
+    margin-left: auto;
+    margin-right: auto;
     width: 13rem;
-    
 }
 
-.search button{
+.search button {
     border: none;
     cursor: pointer;
     width: 2rem;
