displaying high of temp and succesfully adding loading screen

--- a/towStyles.css
+++ b/towStyles.css
@@ -115,8 +115,8 @@ li .active:hover {
     padding-top: 5px;
 }
 
-.bottom h6, .bottom p{
-    display: inline;
+.bottom h6, .bottom p, .bottom span, .stage{
+    display: inline-block;
     font-size: 16px;
     line-height: 24px;
 }
@@ -130,6 +130,7 @@ li .active:hover {
     font-family: Consolas, monaco, monospace; 
     font-size: 18px;
     font-weight: 700;
+    margin-left: -22px;
 }
 
 .bottom h1{
@@ -171,6 +172,54 @@ li .active:hover {
     padding: 7px 0px 5px;
 }
 
+.stage{
+    padding-left: 20px;
+}
+.dot-flashing {
+    position: relative;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgb(76, 42, 230);
+    color: rgb(76, 42, 230);
+    animation: dot-flashing 1s infinite linear alternate;
+    animation-delay: 0.5s;
+  }
+  .dot-flashing::before, .dot-flashing::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+  }
+  .dot-flashing::before {
+    left: -15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgb(76, 42, 230);
+    color: rgb(76, 42, 230);
+    animation: dot-flashing 1s infinite alternate;
+    animation-delay: 0s;
+  }
+  .dot-flashing::after {
+    left: 15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgb(76, 42, 230);
+    color: rgb(76, 42, 230);
+    animation: dot-flashing 1s infinite alternate;
+    animation-delay: 1s;
+  }
+  
+  @keyframes dot-flashing {
+    0% {
+      background-color: rgb(76, 42, 230);
+    }
+    50%, 100% {
+      background-color: rgba(152, 128, 255, 0.2);
+    }
+  }
 
 
 
