--- a/towStyles.css
+++ b/towStyles.css
@@ -113,6 +113,7 @@ li .active:hover {
     float: left;
     padding-left: 20px;
     padding-top: 5px;
+    width: 200px;
 }
 
 .bottom h6, .bottom p, .bottom span, .stage{
