--- a/towStyles.css
+++ b/towStyles.css
@@ -110,18 +110,20 @@ li .active:hover {
 .bottom{
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     display:block;
+    block-size: 150px;
+    writing-mode: horizontal-tb;
     float: left;
-    padding-left: 20px;
+    padding-left: 12px;
     padding-top: 5px;
 }
 
-.bottom h6, .bottom p, .bottom span, .stage{
+.bottom h6, .bottom p, .bottom span, .stage, .dot-flashing, .data{
     display: inline-block;
     font-size: 16px;
     line-height: 24px;
 }
 
-.bottom h6{
+.bottom h6, .data{
     font-weight: 700;
 }
 
@@ -148,6 +150,7 @@ li .active:hover {
     padding-top: 5px;
 }
 
+
 .top h6, .top p{
     display: inline;
     font-size: 16px;
@@ -173,7 +176,7 @@ li .active:hover {
 }
 
 .stage{
-    padding-left: 20px;
+    padding-left: 20px;  
 }
 .dot-flashing {
     position: relative;
