location added on first page, first page complete

--- a/towStyles.css
+++ b/towStyles.css
@@ -117,9 +117,8 @@ li .active:hover {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     display:block;
     float: left;
-    padding-left: 12px;
-    padding-top: 5px;
-    /* margin-right:35px; */
+    padding-left: 11px;
+    padding-top: 1px;
 }
 
 .bottom .dat{
@@ -142,7 +141,7 @@ li .active:hover {
     font-weight: 900;
     font-size: 19px;
     line-height: 24px;
-    padding: 7px 0px 5px;
+    padding: 7px 0px 4px;
 }
 
 .top{
@@ -150,7 +149,7 @@ li .active:hover {
     left: 223px;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     padding-left: 0px;
-    padding-top: 5px;
+    padding-top: 1px;
 }
 
 .top .dat{
@@ -173,7 +172,7 @@ li .active:hover {
     font-weight: 900;
     font-size: 19px;
     line-height: 24px;
-    padding: 7px 0px 5px;
+    padding: 7px 0px 4px;
 }
 
 .stage{
@@ -190,14 +189,16 @@ li .active:hover {
     color: rgb(76, 42, 230);
     animation: dot-flashing 1s infinite linear alternate;
     animation-delay: 0.5s;
-  }
-  .dot-flashing::before, .dot-flashing::after {
+}
+
+.dot-flashing::before, .dot-flashing::after {
     content: "";
     display: inline-block;
     position: absolute;
     top: 0;
-  }
-  .dot-flashing::before {
+}
+
+.dot-flashing::before {
     left: -15px;
     width: 10px;
     height: 10px;
@@ -206,8 +207,9 @@ li .active:hover {
     color: rgb(76, 42, 230);
     animation: dot-flashing 1s infinite alternate;
     animation-delay: 0s;
-  }
-  .dot-flashing::after {
+}
+
+.dot-flashing::after {
     left: 15px;
     width: 10px;
     height: 10px;
@@ -216,16 +218,87 @@ li .active:hover {
     color: rgb(76, 42, 230);
     animation: dot-flashing 1s infinite alternate;
     animation-delay: 1s;
-  }
   
-  @keyframes dot-flashing {
+}
+  
+  
+@keyframes dot-flashing {
     0% {
       background-color: rgb(76, 42, 230);
     }
     50%, 100% {
       background-color: rgba(152, 128, 255, 0.2);
     }
+}
+
+.dot-flashingt{
+    position: relative;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgb(76, 42, 230);
+    color: rgb(76, 42, 230);
+    animation: dot-flashing 1s infinite linear alternate;
+    animation-delay: 0.5s;
+}
+
+.dot-flashingt::before, .dot-flashingt::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
   }
+
+  .dot-flashingt::before {
+    left: -15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgb(76, 42, 230);
+    color: rgb(76, 42, 230);
+    animation: dot-flashing 1s infinite alternate;
+    animation-delay: 0s;
+}
+
+.dot-flashingt::after {
+    left: 15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgb(76, 42, 230);
+    color: rgb(76, 42, 230);
+    animation: dot-flashing 1s infinite alternate;
+    animation-delay: 1s;
+}
+  
+@keyframes dot-flashingt{
+    0% {
+      background-color: rgb(76, 42, 230);
+    }
+    50%, 100% {
+      background-color: rgba(152, 128, 255, 0.2);
+    }
+}
+
+.location{
+    width:100%;
+    position:fixed;
+    font-weight: 700;
+    font-family: Consolas, monaco, monospace; 
+    bottom: 4px;
+    left: 11px;
+    line-height: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+#loc{
+    font: 12px;
+    color: rgb(76, 42, 230);
+    padding-left:2px;
+}
+
+
 
 
 
